--- a/FellowshipOne.API.Tests/App.config
+++ b/FellowshipOne.API.Tests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings file="c:\dev\csharp-f1-api-services\FellowshipOne.API.Tests\credentials.config">
-    <add key="test" value="eww"/>
+  <appSettings file="C:\dev\fellowshiponeapi-csharp-wrapper\FellowshipOne.API.Tests\credentials.config">
+
   </appSettings>
 </configuration>
