--- a/FellowshipOne.API/FellowshipOne.API.csproj
+++ b/FellowshipOne.API/FellowshipOne.API.csproj
@@ -33,9 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=104.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
+    <Reference Include="Restify">
+      <HintPath>..\..\contribution-app\packages\Restify.1.0.6\lib\net40\Restify.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\..\contribution-app\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,11 +84,15 @@
     <Compile Include="People\Model\Address.cs" />
     <Compile Include="People\Model\Attribute.cs" />
     <Compile Include="People\Model\AttributeGroup.cs" />
+    <Compile Include="People\Model\ChurchConfig.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="People\Model\Communication.cs" />
     <Compile Include="People\Model\Household.cs" />
     <Compile Include="People\Model\Occupation.cs" />
     <Compile Include="People\Model\Person.cs" />
     <Compile Include="People\Model\Status.cs" />
+    <Compile Include="People\Model\TimeZone.cs" />
     <Compile Include="People\Model\WeblinkUser.cs" />
     <Compile Include="People\QueryObject\HouseholdQO.cs" />
     <Compile Include="People\QueryObject\PeopleQO.cs" />
@@ -94,6 +100,9 @@
     <Compile Include="People\Sets\Addresses.cs" />
     <Compile Include="People\Sets\AttributeGroups.cs" />
     <Compile Include="People\Sets\Attributes.cs" />
+    <Compile Include="People\Sets\ChurchConfigs.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="People\Sets\Communications.cs" />
     <Compile Include="People\Sets\Households.cs" />
     <Compile Include="People\Sets\People.cs" />
@@ -106,18 +115,10 @@
     <Compile Include="RestClient.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\restify\Restify\Restify.csproj">
-      <Project>{1f97b86f-d2e6-43f4-9595-d01859a357d7}</Project>
-      <Name>Restify</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
