f1-3350 added support for contributiontype

--- a/FellowshipOne.API/FellowshipOne.API.csproj
+++ b/FellowshipOne.API/FellowshipOne.API.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Giving\Enum\BatchTypes.cs" />
     <Compile Include="Giving\Enum\PaymentTypes.cs" />
     <Compile Include="Giving\Model\Batch.cs" />
+    <Compile Include="Giving\Model\ContributionType.cs" />
     <Compile Include="Giving\Model\RDCBatch.cs" />
     <Compile Include="Giving\Model\RDCBatchItem.cs" />
     <Compile Include="Giving\Sets\Batches.cs" />
