--- a/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
+++ b/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Authorize\FristParty.cs" />
     <Compile Include="Base.cs" />
+    <Compile Include="Giving\BatchesTest.cs" />
     <Compile Include="People\PeopleTests.cs" />
     <Compile Include="People\StatusTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
