--- a/FellowshipOne.API/FellowshipOne.API.csproj
+++ b/FellowshipOne.API/FellowshipOne.API.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Restify, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Restify.1.0.11\lib\net40\Restify.dll</HintPath>
-    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\..\contribution-app\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
@@ -59,8 +55,10 @@
     <Compile Include="Giving\Enum\PaymentTypes.cs" />
     <Compile Include="Giving\Model\Batch.cs" />
     <Compile Include="Giving\Model\ContributionType.cs" />
+    <Compile Include="Giving\Model\RDCBatchItemDetail.cs" />
     <Compile Include="Giving\Model\RDCBatch.cs" />
     <Compile Include="Giving\Model\RDCBatchItem.cs" />
+    <Compile Include="Giving\QueryObject\BatchQO.cs" />
     <Compile Include="Giving\Sets\Batches.cs" />
     <Compile Include="Giving\Sets\RDCBatches.cs" />
     <Compile Include="Giving\Sets\RDCBatchItems.cs" />
@@ -121,6 +119,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\restify\Restify\Restify.csproj">
+      <Project>{1f97b86f-d2e6-43f4-9595-d01859a357d7}</Project>
+      <Name>Restify</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
