--- a/FellowshipOne.API/FellowshipOne.API.csproj
+++ b/FellowshipOne.API/FellowshipOne.API.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Restify, Version=1.0.0.14, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\contact-card-automation\AutoContact\packages\Restify.1.0.14\lib\net40\Restify.dll</HintPath>
-    </Reference>
     <Reference Include="RestSharp, Version=104.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\contact-card-automation\AutoContact\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
@@ -126,6 +122,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\restify\Restify\Restify.csproj">
+      <Project>{1f97b86f-d2e6-43f4-9595-d01859a357d7}</Project>
+      <Name>Restify</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
