--- a/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
+++ b/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
@@ -80,7 +80,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Groups\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
