--- a/FellowshipOne.API/FellowshipOne.API.csproj
+++ b/FellowshipOne.API/FellowshipOne.API.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Giving\Sets\RDCBatches.cs" />
     <Compile Include="Giving\Sets\RDCBatchItems.cs" />
     <Compile Include="Giving\Sets\ReferenceImages.cs" />
+    <Compile Include="Groups\Enum\Genders.cs" />
     <Compile Include="IBuilder.cs" />
     <Compile Include="ICollectionBuilder.cs" />
     <Compile Include="Model\ApiModel.cs" />
