logit - added logit resrouce

--- a/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
+++ b/FellowshipOne.API.Tests/FellowshipOne.API.Tests.csproj
@@ -37,6 +37,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MbUnit, Version=3.4.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\shared\Assemblies\Testing\MbUnit.dll</HintPath>
+    </Reference>
     <Reference Include="Restify">
       <HintPath>..\packages\Restify.1.0.15\lib\Restify.dll</HintPath>
     </Reference>
@@ -44,7 +48,7 @@
       <HintPath>..\packages\RestSharp.104.2.0\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="Shouldly">
-      <HintPath>..\packages\Shouldly.1.1.1.1\lib\35\Shouldly.dll</HintPath>
+      <HintPath>..\..\shared\Assemblies\packages\Shouldly.1.1.1.1\lib\35\Shouldly.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
